# cuda-gtest-cmake-template

./: CMakeLists.txt  README.md
include/: lib.cuh
src/: CMakeLists.txt  lib.cu
test/: CMakeLists.txt  lib_test.cpp
